--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ rel="stylesheet"
         <div
           class="p-5 text-center bg-image imgg"
           style="
-            background-image: url('https://i.pinimg.com/564x/7d/10/02/7d10021078e9da619c7be2217b88bef1.jpg');
+            background-image: url('https://c1.wallpaperflare.com/preview/1017/473/68/clothing-store-shop-boutique-men-s-fashion.jpg');
             height: 400px;
           "
         >
