--- a/products.html
+++ b/products.html
@@ -22,7 +22,7 @@ rel="stylesheet"
 />
 
     <link rel="stylesheet" href="style.css">
-    <title>Tm Store</title>
+    <title>Products</title>
 </head>
 <body>
 
@@ -63,34 +63,11 @@ rel="stylesheet"
       </nav>
       <!-- Navbar -->
 
-      <header>
-
-        <!-- Background image -->
-        <div
-          class="p-5 text-center bg-image imgg"
-          style="
-            background-image: url('https://c1.wallpaperflare.com/preview/1017/473/68/clothing-store-shop-boutique-men-s-fashion.jpg');
-            height: 400px;
-          "
-        >
-          <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
-            <div class="d-flex justify-content-center align-items-center h-100">
-              <div class="text-white">
-                <h1 class="mb-3">TM Store</h1>
-                <h4 class="mb-3">Best Offers Just For You!</h4>
-                <!-- <a class="btn btn-outline-light btn-lg" href="#!" role="button"
-                >Call to action</a
-                > -->
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- Background image -->
-      </header>
+      <h1 class="text-center mt-4">Products</h1>
+      <div class="cont mt-5" id="cont">
+    </div>
     
-      <!-- products  -->
 </body>
-
 <script src="main.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
