some dummy edits

--- a/products.html
+++ b/products.html
@@ -53,10 +53,10 @@ rel="stylesheet"
                 </ul>
               </li>
             </ul>
-            <div>
+            <!-- <div>
                 <button class="btn" type="button"><a href="logIn.html">Log in</a></button>
                 <button class="btn" type="button"><a href="signUp.html">Sign up</a></button>   
-            </div>
+            </div> -->
            
           </div>
         </div>
