--- a/logIn.html
+++ b/logIn.html
@@ -64,7 +64,7 @@ rel="stylesheet"
       <!-- Navbar -->
     
       <!-- log in container -->
-      <div class="container mt-5 w-25 border p-5">
+      <div class="container mt-5 w-25 border p-5 login-signup">
        
           <!-- Email input -->
           <div class="form-outline mb-4">
