--- a/signUp.html
+++ b/signUp.html
@@ -65,7 +65,7 @@ rel="stylesheet"
     
           <!-- Registeration  -->
           
-          <div class="container w-25 border p-5 mt-5">
+          <div class="container w-25 border p-5 mt-5 login-signup">
                         <!-- 2 column grid layout with text inputs for the first and last names -->
 
                             <div class="form-outline mb-4">
